--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "colors": "^1.4.0",
     "dotenv": "^16.0.3",
     "ep-det-core": "github:Epilepsy-Detection/ep-det-core",
